{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 135,
  "lineage": "4521c7d9-71b6-514e-8540-b778e5a4afb9",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/phrasal-aegis-376702/zones/asia-southeast1-b/instanceGroups/web-mig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-06-03T00:17:15.343-07:00",
            "enable_cdn": false,
            "external_managed_migration_testing_percentage": 0,
            "fingerprint": "sdZ63EPihTs=",
            "generated_id": -1231872108,
            "health_checks": [
              "projects/phrasal-aegis-376702/global/healthChecks/http-health-check"
            ],
            "id": "projects/phrasal-aegis-376702/global/backendServices/web-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "web-backend-service",
            "port_name": "http",
            "project": "phrasal-aegis-376702",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/phrasal-aegis-376702/global/backendServices/web-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_health_check.http",
            "google_compute_instance_group_manager.web-mig",
            "google_compute_instance_template.default",
            "google_compute_network.main",
            "google_compute_subnetwork.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-06-03T00:16:23.934-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/phrasal-aegis-376702/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/phrasal-aegis-376702/global/networks/public-vpc",
            "priority": 1000,
            "project": "phrasal-aegis-376702",
            "self_link": "https://www.googleapis.com/compute/v1/projects/phrasal-aegis-376702/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-06-03T00:16:23.946-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/phrasal-aegis-376702/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/phrasal-aegis-376702/global/networks/public-vpc",
            "priority": 1000,
            "project": "phrasal-aegis-376702",
            "self_link": "https://www.googleapis.com/compute/v1/projects/phrasal-aegis-376702/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "external_managed_backend_bucket_migration_testing_percentage": 0,
            "forwarding_rule_id": -1231872175,
            "id": "projects/phrasal-aegis-376702/global/forwardingRules/web-forwarding-rule",
            "ip_address": "34.54.7.178",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "web-forwarding-rule",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "phrasal-aegis-376702",
            "self_link": "https://www.googleapis.com/compute/v1/projects/phrasal-aegis-376702/global/forwardingRules/web-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/phrasal-aegis-376702/global/targetHttpProxies/web-http-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_health_check.http",
            "google_compute_instance_group_manager.web-mig",
            "google_compute_instance_template.default",
            "google_compute_network.main",
            "google_compute_subnetwork.public",
            "google_compute_target_http_proxy.default",
            "google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/phrasal-aegis-376702/global/networks/public-vpc",
            "mtu": 0,
            "name": "public-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "6319155960846950367",
            "numeric_id": "6319155960846950367",
            "project": "phrasal-aegis-376702",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/phrasal-aegis-376702/global/networks/public-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-03T00:16:24.702-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.0.1.1",
            "id": "projects/phrasal-aegis-376702/regions/asia-southeast1/subnetworks/public-subnet-1",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "public-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/phrasal-aegis-376702/global/networks/public-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "phrasal-aegis-376702",
            "purpose": "PRIVATE",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/phrasal-aegis-376702/regions/asia-southeast1/subnetworks/public-subnet-1",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": -1231872089
          },
          "dependencies": [
            "google_compute_network.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-03T00:16:24.629-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.0.2.1",
            "id": "projects/phrasal-aegis-376702/regions/asia-southeast1/subnetworks/public-subnet-2",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "public-subnet-2",
            "network": "https://www.googleapis.com/compute/v1/projects/phrasal-aegis-376702/global/networks/public-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "phrasal-aegis-376702",
            "purpose": "PRIVATE",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/phrasal-aegis-376702/regions/asia-southeast1/subnetworks/public-subnet-2",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": -1231872089
          },
          "dependencies": [
            "google_compute_network.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-03T00:16:24.941-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.0.3.1",
            "id": "projects/phrasal-aegis-376702/regions/asia-southeast1/subnetworks/public-subnet-3",
            "ip_cidr_range": "10.0.3.0/24",
            "name": "public-subnet-3",
            "network": "https://www.googleapis.com/compute/v1/projects/phrasal-aegis-376702/global/networks/public-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "phrasal-aegis-376702",
            "purpose": "PRIVATE",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/phrasal-aegis-376702/regions/asia-southeast1/subnetworks/public-subnet-3",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": -1231872089
          },
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-03T00:18:10.651-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/phrasal-aegis-376702/global/targetHttpProxies/web-http-proxy",
            "name": "web-http-proxy",
            "project": "phrasal-aegis-376702",
            "proxy_bind": false,
            "proxy_id": -1231872163,
            "self_link": "https://www.googleapis.com/compute/v1/projects/phrasal-aegis-376702/global/targetHttpProxies/web-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/phrasal-aegis-376702/global/urlMaps/web-url-map"
          },
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_health_check.http",
            "google_compute_instance_group_manager.web-mig",
            "google_compute_instance_template.default",
            "google_compute_network.main",
            "google_compute_subnetwork.public",
            "google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-03T00:17:58.662-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/phrasal-aegis-376702/global/backendServices/web-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "aUx3ipQ5mhU=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/phrasal-aegis-376702/global/urlMaps/web-url-map",
            "map_id": -1231872183,
            "name": "web-url-map",
            "path_matcher": [],
            "project": "phrasal-aegis-376702",
            "self_link": "https://www.googleapis.com/compute/v1/projects/phrasal-aegis-376702/global/urlMaps/web-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_health_check.http",
            "google_compute_instance_group_manager.web-mig",
            "google_compute_instance_template.default",
            "google_compute_network.main",
            "google_compute_subnetwork.public"
          ]
        }
      ]
    }
  ]
}